// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inferType correctly infers the "BASIC_LIVE_OBJECT" schema 1`] = `
"type Storage {
  fills: Fill
  strokes: Stroke
}

type Fill {
  liveblocksType: String
  data: Datum
}

type Stroke {
  liveblocksType: String
  data: Datum
}

type Datum {
  mesh: String
  sole: String
  stripes?: String
  laces: String
}"
`;

exports[`inferType correctly infers the "BASIC_MERGE" schema 1`] = `
"type Storage {
  fills: Fill
  strokes: Stroke
}

type Fill {
  liveblocksType: String
  data: Datum
}

type Stroke {
  liveblocksType: String
  data: Datum
}

type Datum {
  mesh: Mesh
  sole: String
  stripes?: String
  laces: String
}

type Mesh {
  b?: Int
  a?: Int
}"
`;

exports[`inferType correctly infers the "BASIC_UNMERGEABLE" schema 1`] = `
"type Storage {
  fills: Fill
  strokes: Stroke
}

type Fill {
  liveblocksType: String
  data: Datum
}

type Datum {
  mesh: Mesh
  sole: String
  stripes: String
  laces: String
}

type Mesh {
  a: Int
}

type Stroke {
  liveblocksType: String
  data: StrokeDatum
}

type StrokeDatum {
  mesh: DatumMesh
  sole: String
  laces: String
}

type DatumMesh {
  a: String
}"
`;

exports[`inferType correctly infers the "EMPTY" schema 1`] = `
"type Storage {
}"
`;
